<resources>
<<<<<<< HEAD
    <string name="app_name">Triqui</string>
=======
    <string name="app_name">Triki</string>
>>>>>>> 8b8fe17a16a6cad622ff5f9674466a4c93132c96
    <string name="player_one">Player One</string>
    <string name="player_one_score">0</string>
    <string name="player_two">Player Two</string>
    <string name="player_two_score">0</string>
    <string name="game_mode">Clasico</string>
<<<<<<< HEAD
=======
    <string name="game_mode2">SinglePlayer</string>
>>>>>>> 8b8fe17a16a6cad622ff5f9674466a4c93132c96
    <string name="reset">Reset</string>
</resources>