<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClasicoActivity">

    <TextView
        android:id="@+id/playerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp" />

    <TextView
        android:id="@+id/playerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one_score"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/playerOne"
        app:layout_constraintLeft_toLeftOf="@+id/playerOne"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/playerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/player_two"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:layout_editor_absoluteX="296dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/playerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two_score"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/playerTwo"
        app:layout_constraintRight_toRightOf="@+id/playerTwo"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp" />

    <TextView
        android:id="@+id/gameType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_mode"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/playerOneScore"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/gameType"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"

        />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@+id/btn_0"
        app:layout_constraintLeft_toRightOf="@+id/btn_0"




        />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="135dp"
        android:layout_height="135dp"

        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@+id/btn_1"
        app:layout_constraintLeft_toRightOf="@+id/btn_1"
        />
    <Button
        android:id="@+id/btn_3"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/btn_0"
        app:layout_constraintLeft_toLeftOf="@+id/btn_0"


        />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="135dp"
        android:layout_height="135dp"

        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@+id/btn_3"
        app:layout_constraintLeft_toRightOf="@+id/btn_3"
        />
    <Button
        android:id="@+id/btn_5"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@+id/btn_4"
        app:layout_constraintLeft_toRightOf="@+id/btn_4"




        />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="135dp"
        android:layout_height="135dp"

        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/btn_3"
        app:layout_constraintLeft_toLeftOf="@+id/btn_3"
        />
    <Button
        android:id="@+id/btn_7"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@+id/btn_6"
        app:layout_constraintLeft_toRightOf="@+id/btn_6"




        />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="135dp"
        android:layout_height="135dp"

        android:textStyle="bold"
        android:textSize="60sp"
        android:backgroundTint="#413F43"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@+id/btn_7"
        app:layout_constraintLeft_toRightOf="@+id/btn_7"
        />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Reset"
        android:backgroundTint="#E1470D"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_6"
        app:layout_constraintRight_toRightOf="parent"

        />

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#E1470D"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="volver"
        android:text="Volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

</androidx.constraintlayout.widget.ConstraintLayout>